fixing text align

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
   color: #222;
   margin: 0;
   line-height: 1.7;
-  text-align: center;
+  text-align: left;
 }
 
 .container {
@@ -87,4 +87,7 @@ h2 {
 a {
   color: #2563eb;
   text-decoration: none;
+}
+p{
+    text-align: left;
 }
